Actualiza estilos de imagen en las páginas de inicio de sesión y registro, y ajusta el ancho de las imágenes.

--- a/frontend/src/pages/RegisterPage.css
+++ b/frontend/src/pages/RegisterPage.css
@@ -21,7 +21,7 @@ ion-col h2 {
 }
 
 /* Imagen */
-ion-col img {
+ion-col .register-image {
      display: block;
      margin: 1rem auto;
      width: 150px;
