--- a/frontend/src/pages/LoginPage.css
+++ b/frontend/src/pages/LoginPage.css
@@ -21,7 +21,7 @@ ion-col h2 {
 }
 
 /* Imagen */
-ion-col img {
+ion-col .login-image {
      display: block;
      margin: 1rem auto;
      width: 150px;
